[feat] : 로그인 api 연결

--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.2/kakao.min.js"
+      integrity="sha384-TiCUE00h649CAMonG018J2ujOgDKW/kVWlChEuu4jK2vxfAAD0eZxzCKakxg55G4"
+      crossorigin="anonymous"
+    ></script>
     <title>빼곡</title>
   </head>
-  <body  class="bg-gray-100">
-    <div id="root" class="max-w-screen-sm h-dvh m-auto bg-white"></div>
+  <body class="bg-gray-100">
+    <div id="root" class="m-auto h-dvh max-w-screen-sm bg-white"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
