--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>빼곡</title>
   </head>
   <body class="bg-gray-100">
-    <div id="root" class="m-auto h-dvh max-w-screen-sm bg-white"></div>
+    <div id="root" class="m-auto h-dvh max-w-screen-sm bg-main"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
