--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body class="bg-gray-100">
     <div id="modal"></div>
-    <div id="root" class="bg-mainLightGray m-auto h-dvh max-w-screen-sm"></div>
+    <div id="root" class="m-auto h-dvh max-w-screen-sm bg-main"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
