[feat] :  ios scroll bounce 비활성화

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" className="overflow-hidden">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,user-scalable=no,  initial-scale=1.0" />
@@ -10,7 +10,7 @@
     ></script>
     <title>빼곡</title>
   </head>
-  <body class="bg-gray-100">
+  <body class="bg-gray-100 fixed inset-0 overflow-hidden">
     <div id="modal"></div>
     <div id="root" class="m-auto h-dvh max-w-screen-sm bg-main"></div>
     <script type="module" src="/src/main.tsx"></script>
