[refactor] : 최대 너비를 지정함

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body class="bg-gray-100 fixed inset-0 overflow-hidden">
     <div id="modal"></div>
-    <div id="root" class="m-auto h-dvh max-w-screen-sm bg-main"></div>
+    <div id="root" class="relative m-auto h-dvh max-w-screen-sm bg-main"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
