[feat] : oauth 프로덕션 전환 인증을 위해 company 페이지 접근시 노션 홈페이지로 리디렉션

--- a/index.html
+++ b/index.html
@@ -3,11 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,user-scalable=no,  initial-scale=1.0" />
+    <meta name="robots" content="noindex, nofollow" />
     <script
       src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.2/kakao.min.js"
       integrity="sha384-TiCUE00h649CAMonG018J2ujOgDKW/kVWlChEuu4jK2vxfAAD0eZxzCKakxg55G4"
       crossorigin="anonymous"
     ></script>
+    <script>
+      if (window.location.pathname === '/company/homepage') {
+        window.location.href = 'https://bbaegok.notion.site';
+      }
+      if (window.location.pathname === '/company/term') {
+        window.location.href = 'https://kyoung2.notion.site/da9b8d7e0ddc49988bbbc37a3733b3f9';
+      }
+      if (window.location.pathname === '/company/privacy-policy') {
+        window.location.href = 'https://kyoung2.notion.site/19c2522077a080128624c035abaa6cdf';
+      }
+    </script>
     <title>빼곡</title>
   </head>
   <body class="bg-gray-100 fixed inset-0 overflow-hidden">
