--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
     </script>
     <title>빼곡</title>
   </head>
+  
+    <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1LMWHHC708"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-1LMWHHC708');
+  </script>
+  
   <body class="bg-gray-100 fixed inset-0 overflow-hidden">
     <div id="modal"></div>
     <div id="root" class="relative m-auto h-dvh max-w-screen-sm bg-main"></div>
