--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
     </script>
     <title>빼곡</title>
   </head>
-  
+
     <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1LMWHHC708"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-3720KEJ2RG"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
   
-    gtag('config', 'G-1LMWHHC708');
+    gtag('config', 'G-3720KEJ2RG');
   </script>
   
   <body class="bg-gray-100 fixed inset-0 overflow-hidden">
