--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" className="overflow-hidden">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width,user-scalable=no,  initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, user-scalable=no, viewport-fit=cover, initial-scale=1.0" />
     <meta name="robots" content="noindex, nofollow" />
     <script
       src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.2/kakao.min.js"
