--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     </script>
     <title>빼곡</title>
   </head>
-  <body class="bg-gray-100 fixed inset-0 overflow-hidden">
+  <body class="fixed inset-0 overflow-hidden">
     <div id="modal"></div>
-    <div id="root" class="relative m-auto h-dvh max-w-screen-sm bg-main"></div>
+    <div id="root" class="relative m-auto h-dvh max-w-screen-sm"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
