[refactor] : 모바일 버전의 max-width를 적용
- max-width를 추가
- 헤더와 바디에 max-width 적용

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
   <body class="fixed inset-0 overflow-hidden">
     <div id="modal"></div>
-    <div id="root" class="relative m-auto h-dvh max-w-screen-sm"></div>
+    <div id="root" class="relative m-auto h-dvh max-w-mobile"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
