[refactor] : border 제거
- app 컴포넌트의 테두리를 제거
- 대신 html 전체의 배경색을 지정해 메인 컨텐츠와 분리되도록 함

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </script>
     <title>빼곡</title>
   </head>
-  <body class="fixed inset-0 overflow-hidden">
+  <body class="fixed inset-0 overflow-hidden bg-neutral-20">
     <div id="modal"></div>
     <div id="root" class="relative m-auto h-dvh max-w-mobile"></div>
     <script type="module" src="/src/main.tsx"></script>
